# pokeapi-ingest

./: .env  .gitignore  Dockerfile  LICENSE  README.md  devenv.nix  docker-compose.yml  flake.nix  pyproject.toml
.tapes/: docker-build-n-run-app.tape  stockpile-ingest-all.tape  stockpile-ingest.tape
pokeapi_ingest/service/: models.py  pokeapi_service.py
pokeapi_ingest/stockpile/: cli.py  logging.py  main.py  observers.py
tests/: fakes.py  test_stockpile_cli.py
