[tool.poetry]
name = "pokeapi-ingest"
version = "0.1.0"
description = "Containerised CLI for ingesting data from PokeAPI"
authors = ["Max Koopman <mlkoopman@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pydantic = "^2.4.2"
requests = "^2.31.0"
rich = "^13.6.0"
typer = { version = "^0.9.0", extras = ["all"] }
python-dotenv = "^1.0.0"

[tool.poetry.scripts]
stockpile = "pokeapi_ingest.stockpile.cli:app"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-icdiff = "^0.8"
pytest-clarity = "^1.0.1"
pytest-sugar = "^0.9.7"


[tool.poetry.group.tools.dependencies]
poethepoet = "^0.24.0"
pandas = "^2.1.1"

[tool.pytest.ini-options]
markers = ["unit: marks all unittests.", "integ: marks all integration tests."]

[tool.poe.tasks]
test-unit = "pytest tests"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
